@@ -1,17 +1,16 @@
-import org.hibernate.Session;
-import org.hibernate.Transaction;
-import org.junit.Before;
 import org.junit.Test;
 import org.springframework.test.context.ContextConfiguration;
 import ru.hh.school.dao.EmployerDao;
 import ru.hh.school.dao.VacancyDao;
-import ru.hh.school.dto.EmployerDtoById;
-import ru.hh.school.dto.FavoriteEmployerDto;
+import ru.hh.school.dto.EmployerDto;
+import ru.hh.school.dto.FavoriteVacancyDto;
+import ru.hh.school.dto.SalaryDto;
+import ru.hh.school.dto.VacancyDto;
 import ru.hh.school.entity.*;
-import ru.hh.school.util.VacancyMapper;
 
 import javax.inject.Inject;
 import javax.persistence.NoResultException;
+import javax.ws.rs.BadRequestException;
 import javax.ws.rs.core.GenericType;
 import javax.ws.rs.core.Response;
 import java.io.IOException;
@@ -20,21 +19,17 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.time.OffsetDateTime;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.stream.IntStream;
 
 import static org.junit.Assert.*;
-import static org.junit.Assert.assertEquals;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.doReturn;
+import static org.mockito.Mockito.doThrow;
 
 @ContextConfiguration(classes = AppTestConfig.class)
 public class VacancyResourceTest extends AppBaseTest {
-
-
 
     @Inject
     private VacancyDao vacancyDao;
@@ -42,307 +37,341 @@ public class VacancyResourceTest extends AppBaseTest {
     @Inject
     private EmployerDao employerDao;
 
-    @Inject
-    private VacancyMapper vacancyMapper;
-
     @Test
     public void postSingleFavoriteVacancyShouldSaveVacancyAndEmployerToDatabase() throws IOException {
-        HttpResponse response = saveSingleVacancyToDatabase("/vacancy.json");
+        HttpResponse response = saveSingleVacancyToDatabase(SINGLE_VACANCY_JSON);
         assertEquals(200, response.statusCode());
 
-        Vacancy vacancy = vacancyDao.getEager(employerId);
-        EmployerDtoById jsonEmployer = getEmployerDtoFromJson("/employer.json");
-        assertDtoFromJsonAndEntityAreSame(jsonEmployer, employer);
-        assertEquals(0, (int) employer.getViewsCount().getCounter());
-        assertEquals(DEFAULT_COMMENT, employer.getComment().getComment());
+        Vacancy vacancy = vacancyDao.getEager(vacancyId);
+        VacancyDto vacancyDto = getVacancyDtoFromJson(SINGLE_VACANCY_JSON);
+
+        assertVacancyDtoFromJsonAndEntityAreSame(vacancyDto, vacancy);
+        assertEquals(0, (int) vacancy.getViewsCount().getCounter());
+        assertEquals(DEFAULT_COMMENT, vacancy.getComment().getComment());
     }
 
-    /*@Test
-    public void postSameFavoriteEmployerTwiceShouldReturnBadRequestStatus() throws IOException {
-        HttpResponse first = saveSingleEmployerToDatabase("/employer.json");
+    @Test
+    public void postSingleFavoriteVacancyShouldSaveOnlyVacancyIfEmployerExists() throws IOException {
+        Employer employer = createEmployerWithId(1);
+        vacancyDao.save(employer);
+
+        String vacancyJsonString = Files.readString(Path.of(JSON_BASE_PATH + SINGLE_VACANCY_JSON));
+        doReturn(vacancyJsonString).when(apiService).fetchVacanciesFromApiById(vacancyId);
+        doThrow(BadRequestException.class).when(apiService).fetchEmployersFromApiById(employerId);
+        parametersMap.put("vacancy_id", String.valueOf(vacancyId));
+        parametersMap.put("comment", DEFAULT_COMMENT);
+        HttpResponse response = executePostRequestWithParams(FAVORITE_VACANCY_BASE_URL, parametersMap);
+        assertEquals(200, response.statusCode());
+        System.out.println("HERE");
+        Vacancy vacancy = vacancyDao.getEager(vacancyId);
+        Employer vacancyEmployer = vacancy.getEmployer();
+        assertEquals(employer.getId(), vacancyEmployer.getId());
+        assertEquals(employer.getName(), vacancyEmployer.getName());
+        assertEquals(employer.getDescription(), vacancyEmployer.getDescription());
+    }
+
+    @Test
+    public void postSameFavoriteVacancyTwiceShouldReturnBadRequestStatus() throws IOException {
+        HttpResponse first = saveSingleVacancyToDatabase(SINGLE_VACANCY_JSON);
         assertEquals(200, first.statusCode());
-        HttpResponse second = saveSingleEmployerToDatabase("/employer.json");
+        HttpResponse second = saveSingleVacancyToDatabase(SINGLE_VACANCY_JSON);
         assertEquals(400, second.statusCode());
-    }*/
+    }
 
-   /* @Test
-    public void getFavoriteEmployerEndpointWithEmptyTableReturnsEmptyList() {
-        Response response = executeGet(FAVORITE_EMPLOYER_BASE_URL);
-        List<FavoriteEmployerDto> employers = response.readEntity(new GenericType<>() {
-        });
+    @Test
+    public void getFavoriteVacancyEndpointWithEmptyTableReturnsEmptyList() {
+        Response response = executeGet(FAVORITE_VACANCY_BASE_URL);
+        List<FavoriteVacancyDto> vacancies = response.readEntity(new GenericType<>() {});
         assertEquals(200, response.getStatus());
-        assertEquals(0, employers.size());
-    }*/
+        assertEquals(0, vacancies.size());
+    }
 
-    /*@Test
-    public void getFavoriteEmployerEndpointWithNonEmptyTableReturnsListOfValidDto() throws IOException {
-        HttpResponse postResponse = saveSingleEmployerToDatabase("/employer.json");
+    @Test
+    public void getFavoriteVacancyEndpointWithNonEmptyTableReturnsListOfValidDto() throws IOException {
+        HttpResponse postResponse = saveSingleVacancyToDatabase(SINGLE_VACANCY_JSON);
         assertEquals(200, postResponse.statusCode());
-        Response response = executeGet(FAVORITE_EMPLOYER_BASE_URL);
+        Response response = executeGet(FAVORITE_VACANCY_BASE_URL);
         assertEquals(200, response.getStatus());
 
-        List<FavoriteEmployerDto> employers = response.readEntity(new GenericType<>() {
-        });
-        FavoriteEmployerDto employer = employers.get(0);
-        EmployerDtoById jsonEmployer = getEmployerDtoFromJson("/employer.json");
-        assertEquals(1, employers.size());
+        List<FavoriteVacancyDto> vacancies = response.readEntity(new GenericType<>() {});
+        FavoriteVacancyDto vacancy = vacancies.get(0);
+        VacancyDto jsonVacancy = getVacancyDtoFromJson(SINGLE_VACANCY_JSON);
+        assertEquals(1, vacancies.size());
 
-        assertDtoFromJsonAndDtoFromResponseAreSame(jsonEmployer, employer);
-        assertEquals(1, employer.getViewsCount());
-        assertEquals(DEFAULT_COMMENT, employer.getComment());
-        assertEquals(Popularity.REGULAR, employer.getPopularity());
-    }*/
+        assertVacancyDtoFromJsonAndDtoFromResponseAreSame(jsonVacancy, vacancy);
+        assertEquals(1, vacancy.getViewsCount());
+        assertEquals(DEFAULT_COMMENT, vacancy.getComment());
+        assertEquals(Popularity.REGULAR, vacancy.getPopularity());
+    }
 
-    /*@Test
+    @Test
     public void getFavoriteEmployerEndpointPaginationWorks() throws IOException {
-        saveMultipleEmployersToDatabase(30);
+        saveMultipleVacanciesToDatabase(30);
         //Default parameters
-        Response defaultParamsResponse = executeGet(FAVORITE_EMPLOYER_BASE_URL);
-        List<FavoriteEmployerDto> employers = defaultParamsResponse.readEntity(new GenericType<>() {
-        });
+        Response defaultParamsResponse = executeGet(FAVORITE_VACANCY_BASE_URL);
+        List<FavoriteVacancyDto> vacancies = defaultParamsResponse.readEntity(new GenericType<>() {});
         assertEquals(200, defaultParamsResponse.getStatus());
-        assertEquals(20, employers.size());
-        assertEquals(1, employers.get(0).getId());
-        assertEquals(20, employers.get(19).getId());
+        assertEquals(20, vacancies.size());
+        assertEquals(1, vacancies.get(0).getId());
+        assertEquals(20, vacancies.get(19).getId());
         //Per page = 25
-        Response perPage25Response = executeGet(FAVORITE_EMPLOYER_BASE_URL + "?per_page=25");
-        employers = perPage25Response.readEntity(new GenericType<>() {
-        });
+        Response perPage25Response = executeGet(FAVORITE_VACANCY_BASE_URL + "?per_page=25");
+        vacancies = perPage25Response.readEntity(new GenericType<>() {});
         assertEquals(200, perPage25Response.getStatus());
-        assertEquals(25, employers.size());
-        assertEquals(1, employers.get(0).getId());
-        assertEquals(25, employers.get(24).getId());
+        assertEquals(25, vacancies.size());
+        assertEquals(1, vacancies.get(0).getId());
+        assertEquals(25, vacancies.get(24).getId());
         //Per page = 5
-        Response perPage5Response = executeGet(FAVORITE_EMPLOYER_BASE_URL + "?per_page=5");
-        employers = perPage5Response.readEntity(new GenericType<>() {
-        });
+        Response perPage5Response = executeGet(FAVORITE_VACANCY_BASE_URL + "?per_page=5");
+        vacancies = perPage5Response.readEntity(new GenericType<>() {});
         assertEquals(200, perPage5Response.getStatus());
-        assertEquals(5, employers.size());
-        assertEquals(1, employers.get(0).getId());
-        assertEquals(5, employers.get(4).getId());
+        assertEquals(5, vacancies.size());
+        assertEquals(1, vacancies.get(0).getId());
+        assertEquals(5, vacancies.get(4).getId());
         //Page = 2
-        Response page2Response = executeGet(FAVORITE_EMPLOYER_BASE_URL + "?page=1");
-        employers = page2Response.readEntity(new GenericType<>() {
-        });
+        Response page2Response = executeGet(FAVORITE_VACANCY_BASE_URL + "?page=1");
+        vacancies = page2Response.readEntity(new GenericType<>() {});
         assertEquals(200, page2Response.getStatus());
-        assertEquals(10, employers.size());
-        assertEquals(21, employers.get(0).getId());
-        assertEquals(30, employers.get(9).getId());
+        assertEquals(10, vacancies.size());
+        assertEquals(21, vacancies.get(0).getId());
+        assertEquals(30, vacancies.get(9).getId());
         //Page = 4 And Per Page = 5
-        Response page4PerPage5Response = executeGet(FAVORITE_EMPLOYER_BASE_URL + "?page=4&per_page=5");
-        employers = page4PerPage5Response.readEntity(new GenericType<>() {
-        });
+        Response page4PerPage5Response = executeGet(FAVORITE_VACANCY_BASE_URL + "?page=4&per_page=5");
+        vacancies = page4PerPage5Response.readEntity(new GenericType<>() {});
         assertEquals(200, page4PerPage5Response.getStatus());
-        assertEquals(5, employers.size());
-        assertEquals(21, employers.get(0).getId());
-        assertEquals(25, employers.get(4).getId());
+        assertEquals(5, vacancies.size());
+        assertEquals(21, vacancies.get(0).getId());
+        assertEquals(25, vacancies.get(4).getId());
         //Page = 96 And Per Page = 21
-        Response depthTestResponse = executeGet(FAVORITE_EMPLOYER_BASE_URL + "?page=96&per_page=21");
+        Response depthTestResponse = executeGet(FAVORITE_VACANCY_BASE_URL + "?page=96&per_page=21");
         assertEquals(400, depthTestResponse.getStatus());
-        System.out.println(depthTestResponse.readEntity(String.class));
-    }*/
+    }
 
-   /* @Test
-    public void getFavoriteEmployerEndpointShouldIncrementCounterByOne() throws IOException {
-        HttpResponse postResponse = saveSingleEmployerToDatabase("/employer.json");
+    @Test
+    public void getFavoriteVacancyEndpointShouldIncrementVacancyAndEmployerCounterByOne() throws IOException {
+        HttpResponse postResponse = saveSingleVacancyToDatabase(SINGLE_VACANCY_JSON);
         assertEquals(200, postResponse.statusCode());
 
-        IntStream.range(0, 20).forEach(i -> executeGet(FAVORITE_EMPLOYER_BASE_URL));
-        Response response = executeGet(FAVORITE_EMPLOYER_BASE_URL);
-        List<FavoriteEmployerDto> employers = response.readEntity(new GenericType<>() {
-        });
-        FavoriteEmployerDto employer = employers.get(0);
+        IntStream.range(0, 20).forEach(i -> executeGet(FAVORITE_VACANCY_BASE_URL));
+        Response response = executeGet(FAVORITE_VACANCY_BASE_URL);
+        List<FavoriteVacancyDto> vacancies = response.readEntity(new GenericType<>() {});
+        FavoriteVacancyDto vacancy = vacancies.get(0);
 
         assertEquals(200, response.getStatus());
-        assertEquals(1, employers.size());
-        assertEquals(21, employer.getViewsCount());
-    }*/
+        assertEquals(1, vacancies.size());
+        assertEquals(21, vacancy.getViewsCount());
+        assertEquals(21, (int) employerDao.getEager(employerId).getViewsCount().getCounter());
+    }
 
-    /*@Test
-    public void afterFileSettingsThresholdEmployerBecomesPopular() throws IOException {
-        HttpResponse postResponse = saveSingleEmployerToDatabase("/employer.json");
+    @Test
+    public void afterFileSettingsThresholdVacancyBecomesPopular() throws IOException {
+        HttpResponse postResponse = saveSingleVacancyToDatabase(SINGLE_VACANCY_JSON);
         assertEquals(200, postResponse.statusCode());
 
-        IntStream.range(0, 48).forEach(i -> executeGet(FAVORITE_EMPLOYER_BASE_URL));
-        Response response = executeGet(FAVORITE_EMPLOYER_BASE_URL);
-        List<FavoriteEmployerDto> employers = response.readEntity(new GenericType<>() {
-        });
-        FavoriteEmployerDto employer = employers.get(0);
+        IntStream.range(0, 48).forEach(i -> executeGet(FAVORITE_VACANCY_BASE_URL));
+        Response response = executeGet(FAVORITE_VACANCY_BASE_URL);
+        List<FavoriteVacancyDto> vacancies = response.readEntity(new GenericType<>() {});
+        FavoriteVacancyDto vacancy = vacancies.get(0);
 
         assertEquals(200, response.getStatus());
-        assertEquals(49, employer.getViewsCount());
-        assertEquals(Popularity.REGULAR, employer.getPopularity());
+        assertEquals(49, vacancy.getViewsCount());
+        assertEquals(Popularity.REGULAR, vacancy.getPopularity());
 
-        response = executeGet(FAVORITE_EMPLOYER_BASE_URL);
-        employers = response.readEntity(new GenericType<>() {
-        });
-        employer = employers.get(0);
+        response = executeGet(FAVORITE_VACANCY_BASE_URL);
+        vacancies = response.readEntity(new GenericType<>() {});
+        vacancy = vacancies.get(0);
 
         assertEquals(200, response.getStatus());
-        assertEquals(50, employer.getViewsCount());
-        assertEquals(Popularity.POPULAR, employer.getPopularity());
-    }*/
+        assertEquals(50, vacancy.getViewsCount());
+        assertEquals(Popularity.POPULAR, vacancy.getPopularity());
+    }
 
-   /* @Test
+    @Test
     public void counterIsThreadSafeForSingleEntry() throws IOException, InterruptedException {
-        saveSingleEmployerToDatabase("/employer.json");
+        saveSingleVacancyToDatabase(SINGLE_VACANCY_JSON);
         ExecutorService executor = Executors.newFixedThreadPool(3);
-        IntStream.range(0, 200).forEach(i -> executor.execute(() -> executeGet(FAVORITE_EMPLOYER_BASE_URL)));
+        IntStream.range(0, 200).forEach(i -> executor.execute(() -> executeGet(FAVORITE_VACANCY_BASE_URL)));
         awaitExecutorTermination(executor);
 
-        Employer employer = employerDao.getEager(employerId);
-        assertEquals(200, (int) employer.getViewsCount().getCounter());
-    }*/
+        Vacancy vacancy = vacancyDao.getEager(vacancyId);
+        assertEquals(200, (int) vacancy.getViewsCount().getCounter());
+        assertEquals(200, (int) vacancy.getEmployer().getViewsCount().getCounter());
+    }
 
-    /*@Test
+    @Test
     public void counterIsThreadSafeForMultipleEntries() throws IOException {
-        saveMultipleEmployersToDatabase(10);
-        ExecutorService executor = Executors.newFixedThreadPool(3);
-        IntStream.range(0, 200).forEach(i -> executor.execute(() -> executeGet(FAVORITE_EMPLOYER_BASE_URL)));
+        saveMultipleVacanciesToDatabase(10);
+        ExecutorService executor = Executors.newFixedThreadPool(4);
+        IntStream.range(0, 300).forEach(i -> executor.execute(() -> executeGet(FAVORITE_VACANCY_BASE_URL)));
         awaitExecutorTermination(executor);
         IntStream.range(1, 11)
-                .mapToObj(i -> employerDao.getEager(i))
-                .peek(employer -> logger.info(employer.getId() + " - " + employer.getName()))
-                .map(employer -> employer.getViewsCount().getCounter())
+                .mapToObj(i -> vacancyDao.getEager(i))
+                .peek(vacancy -> logger.info(vacancy.getId() + " - " + vacancy.getName()))
+                .peek(vacancy ->
+                        assertEquals(
+                                300, (int) vacancy.getEmployer().getViewsCount().getCounter()
+                        ))
+                .map(vacancy -> vacancy.getViewsCount().getCounter())
                 .peek(counter -> logger.info("Views count: " + counter))
-                .forEach(counter -> assertEquals(200, (int) counter));
-    }*/
+                .forEach(counter -> assertEquals(300, (int) counter));
+    }
 
 
-    /*@Test
-    public void deleteEmployerWhileGettingFavorites() throws IOException, InterruptedException {
-        saveMultipleEmployersToDatabase(10);
+    @Test
+    public void deleteVacancyWhileGettingFavorites() throws IOException, InterruptedException {
+        saveMultipleVacanciesToDatabase(10);
         ExecutorService executor = Executors.newFixedThreadPool(3);
-        for (int i = 0; i < 200; i++) {
+        for (int i = 0; i < 300; i++) {
             if (i == 100) {
-                executor.execute(() -> executeDeleteRequest(FAVORITE_EMPLOYER_BASE_URL + "/" + 2));
+                executor.execute(() -> executeDeleteRequest(FAVORITE_VACANCY_BASE_URL + "/" + 2));
             }
-            executor.execute(() -> executeGet(FAVORITE_EMPLOYER_BASE_URL));
+            executor.execute(() -> executeGet(FAVORITE_VACANCY_BASE_URL));
         }
         awaitExecutorTermination(executor);
-        assertTrue(employerDao.get(Employer.class, 2).isEmpty());
+        assertTrue(vacancyDao.get(Vacancy.class, 2).isEmpty());
+
         IntStream.range(1, 11).filter(i -> i != 2)
-                .mapToObj(i -> employerDao.getEager(i))
-                .peek(employer -> logger.info(employer.getId() + " - " + employer.getName()))
-                .map(employer -> employer.getViewsCount().getCounter())
+                .mapToObj(i -> vacancyDao.getEager(i))
+                .peek(vacancy -> logger.info(vacancy.getId() + " - " + vacancy.getName()))
+                .peek(vacancy ->
+                        assertEquals(
+                                300, (int) vacancy.getEmployer().getViewsCount().getCounter()
+                        ))
+                .map(vacancy -> vacancy.getViewsCount().getCounter())
                 .peek(counter -> logger.info("Views count: " + counter))
-                .forEach(counter -> assertEquals(200, (int) counter));
-    }*/
+                .forEach(counter -> assertEquals(300, (int) counter));
+    }
 
-    /*@Test
-    public void putNonExistingFavoriteEmployerEndpointReturns404() {
-        parametersMap.put("comment", "different comment");
-        HttpResponse response = executePutRequestWithParams(FAVORITE_EMPLOYER_BASE_URL + "/" + employerId, parametersMap);
+    @Test
+    public void deleteNonExistingFavoriteVacancyEndpointReturns404() {
+        HttpResponse response = executeDeleteRequest(FAVORITE_VACANCY_BASE_URL + "/" + vacancyId);
         assertEquals(404, response.statusCode());
-    }*/
+    }
 
-    /*@Test
-    public void putFavoriteEmployerEndpointShouldUpdateEmployerCommentInDatabase() throws IOException {
-        HttpResponse postResponse = saveSingleEmployerToDatabase("/employer.json");
-        assertEquals(200, postResponse.statusCode());
-
-        Employer employer = employerDao.getEager(employerId);
-        assertEquals(DEFAULT_COMMENT, employer.getComment().getComment());
-
-        parametersMap.put("comment", "different comment");
-        HttpResponse response = executePutRequestWithParams(FAVORITE_EMPLOYER_BASE_URL + "/" + employerId, parametersMap);
-        assertEquals(200, response.statusCode());
-
-        Employer updatedEmployer = employerDao.getEager(employerId);
-        assertEquals("different comment", updatedEmployer.getComment().getComment());
-    }*/
-
-    /*@Test
-    public void deleteNonExistingFavoriteEmployerEndpointReturns404() {
-        HttpResponse response = executeDeleteRequest(FAVORITE_EMPLOYER_BASE_URL + "/" + employerId);
-        assertEquals(404, response.statusCode());
-    }*/
-
-    /*@Test
-    public void deleteFavoriteEmployerEndpointShouldDeleteEmployerFromDatabase() throws IOException {
+    @Test
+    public void deleteFavoriteVacancyEndpointShouldDeleteEmployerFromDatabase() throws IOException {
         exceptionRule.expect(NoResultException.class);
-        HttpResponse postResponse = saveSingleEmployerToDatabase("/employer.json");
+        HttpResponse postResponse = saveSingleVacancyToDatabase(SINGLE_VACANCY_JSON);
         assertEquals(200, postResponse.statusCode());
 
-        Employer employer = employerDao.getEager(employerId);
-        assertNotNull(employer);
+        Vacancy vacancy = vacancyDao.getEager(vacancyId);
+        assertNotNull(vacancy);
+
+        HttpResponse response = executeDeleteRequest(FAVORITE_VACANCY_BASE_URL + "/" + vacancyId);
+        assertEquals(200, response.statusCode());
+        vacancyDao.getEager(vacancyId);
+    }
+
+    @Test
+    public void deleteFavoriteVacancyEndpointShouldDeleteVacancyAndCounterAndCommentButNotEmployer() throws IOException {
+        HttpResponse postResponse = saveSingleVacancyToDatabase(SINGLE_VACANCY_JSON);
+        assertEquals(200, postResponse.statusCode());
+
+        Vacancy vacancy = vacancyDao.get(Vacancy.class, vacancyId).get();
+
+        assertFalse(vacancyDao.get(VacancyComment.class, vacancyId).isEmpty());
+        assertFalse(vacancyDao.get(VacancyCounter.class, vacancyId).isEmpty());
+        assertNotNull(vacancy.getEmployer());
+
+        HttpResponse response = executeDeleteRequest(FAVORITE_VACANCY_BASE_URL + "/" + vacancyId);
+        assertEquals(200, response.statusCode());
+
+        assertTrue(vacancyDao.get(VacancyComment.class, vacancyId).isEmpty());
+        assertTrue(vacancyDao.get(VacancyCounter.class, vacancyId).isEmpty());
+        assertNotNull(employerDao.get(Employer.class, vacancy.getEmployer().getId()));
+    }
+
+    @Test
+    public void deleteFavoriteEmployerEndpointShouldDeleteVacancy() throws IOException {
+        HttpResponse postResponse = saveSingleVacancyToDatabase(SINGLE_VACANCY_JSON);
+        assertEquals(200, postResponse.statusCode());
+
+        Vacancy vacancy = vacancyDao.get(Vacancy.class, vacancyId).get();
+
+        assertFalse(vacancyDao.get(VacancyComment.class, vacancyId).isEmpty());
+        assertFalse(vacancyDao.get(VacancyCounter.class, vacancyId).isEmpty());
+        assertNotNull(vacancy);
 
         HttpResponse response = executeDeleteRequest(FAVORITE_EMPLOYER_BASE_URL + "/" + employerId);
         assertEquals(200, response.statusCode());
-        employerDao.getEager(employerId);
-    }*/
 
-    /*@Test
-    public void deleteFavoriteEmployerEndpointShouldDeleteEmployerCounterAndComment() throws IOException {
-        HttpResponse postResponse = saveSingleEmployerToDatabase("/employer.json");
-        assertEquals(200, postResponse.statusCode());
+        assertTrue(vacancyDao.get(VacancyComment.class, vacancyId).isEmpty());
+        assertTrue(vacancyDao.get(VacancyCounter.class, vacancyId).isEmpty());
+        assertTrue(vacancyDao.get(Vacancy.class, vacancyId).isEmpty());
+    }
 
-        assertFalse(employerDao.get(EmployerComment.class, employerId).isEmpty());
-        assertFalse(employerDao.get(EmployerCounter.class, employerId).isEmpty());
-
-        HttpResponse response = executeDeleteRequest(FAVORITE_EMPLOYER_BASE_URL + "/" + employerId);
-        assertEquals(200, response.statusCode());
-
-        assertTrue(employerDao.get(EmployerComment.class, employerId).isEmpty());
-        assertTrue(employerDao.get(EmployerCounter.class, employerId).isEmpty());
-    }*/
-
-    /*@Test
-    public void refreshNonExistingFavoriteEmployerEndpointReturns404() {
-        HttpResponse response = executePostRequest(FAVORITE_EMPLOYER_BASE_URL + "/" + employerId + "/refresh");
+    @Test
+    public void refreshNonExistingFavoriteVacancyEndpointReturns404() {
+        HttpResponse response = executePostRequest(FAVORITE_VACANCY_BASE_URL + "/" + vacancyId + "/refresh");
         assertEquals(404, response.statusCode());
-    }*/
+    }
 
-    /*@Test
-    public void refreshFavoriteEmployerEndpointShouldUpdateEmployerFieldsInDatabase() throws IOException {
-        HttpResponse postResponse = saveSingleEmployerToDatabase("/changed_employer.json");
+    @Test
+    public void refreshFavoriteVacancyEndpointShouldUpdateVacancyFieldsInDatabase() throws IOException {
+        String employerJsonString = Files.readString(Path.of(JSON_BASE_PATH + "/changed_employer.json"));
+        String vacancyJsonString = Files.readString(Path.of(JSON_BASE_PATH + "/changed_vacancy.json"));
+        doReturn(vacancyJsonString).when(apiService).fetchVacanciesFromApiById(vacancyId);
+        doReturn(employerJsonString).when(apiService).fetchEmployersFromApiById(employerId);
+        parametersMap.put("vacancy_id", String.valueOf(vacancyId));
+        parametersMap.put("comment", DEFAULT_COMMENT);
+        HttpResponse postResponse = executePostRequestWithParams(FAVORITE_VACANCY_BASE_URL, parametersMap);
         assertEquals(200, postResponse.statusCode());
 
-        EmployerDtoById jsonEmployer = getEmployerDtoFromJson("/changed_employer.json");
-        Employer employer = employerDao.getEager(employerId);
-        assertDtoFromJsonAndEntityAreSame(jsonEmployer, employer);
+        VacancyDto jsonVacancy = getVacancyDtoFromJson("/changed_vacancy.json");
+        Vacancy vacancy = vacancyDao.getEager(vacancyId);
+        assertVacancyDtoFromJsonAndEntityAreSame(jsonVacancy, vacancy);
 
-        String jsonString = Files.readString(Path.of(JSON_BASE_PATH + "/employer.json"));
-        when(apiService.fetchEmployersFromApiById(employerId)).thenReturn(jsonString);
-        HttpResponse response = executePostRequest(FAVORITE_EMPLOYER_BASE_URL + "/" + employerId + "/refresh");
+        String jsonString = Files.readString(Path.of(JSON_BASE_PATH + SINGLE_VACANCY_JSON));
+        String actualEmployerJsonString = Files.readString(Paths.get(JSON_BASE_PATH + SINGLE_EMPLOYER_JSON));
+        doReturn(jsonString).when(apiService).fetchVacanciesFromApiById(vacancyId);
+        doReturn(actualEmployerJsonString).when(apiService).fetchEmployersFromApiById(employerId);
+        HttpResponse response = executePostRequest(FAVORITE_VACANCY_BASE_URL + "/" + vacancyId + "/refresh");
         assertEquals(200, response.statusCode());
 
-        employer = employerDao.getEager(employerId);
-        jsonEmployer = getEmployerDtoFromJson("/employer.json");
-        assertDtoFromJsonAndEntityAreSame(jsonEmployer, employer);
-    }*/
+        vacancy = vacancyDao.getEager(vacancyId);
+        jsonVacancy = getVacancyDtoFromJson(SINGLE_VACANCY_JSON);
+        System.out.println(jsonVacancy + " - " + vacancy);
+        assertVacancyDtoFromJsonAndEntityAreSame(jsonVacancy, vacancy);
+    }
 
-    /*@Test
-    public void refreshEmployerWhileGettingFavorites() throws IOException {
-        saveMultipleEmployersToDatabase(10);
+    @Test
+    public void refreshVacancyWhileGettingFavorites() throws IOException {
+        saveMultipleVacanciesToDatabase(10);
         ExecutorService executor = Executors.newFixedThreadPool(3);
-        String jsonString = Files.readString(Paths.get(JSON_BASE_PATH + "/employer.json"));
-        EmployerDtoById jsonEmployer = getEmployerDtoFromJson("/employer.json");
-        when(apiService.fetchEmployersFromApiById(1)).thenReturn(jsonString);
+
+        String jsonString = Files.readString(Paths.get(JSON_BASE_PATH + SINGLE_VACANCY_JSON));
+        String employerJsonString = Files.readString(Paths.get(JSON_BASE_PATH + SINGLE_EMPLOYER_JSON));
+        VacancyDto jsonVacancy = getVacancyDtoFromJson(SINGLE_VACANCY_JSON);
+
+        doReturn(jsonString).when(apiService).fetchVacanciesFromApiById(vacancyId);
+        doReturn(employerJsonString).when(apiService).fetchEmployersFromApiById(employerId);
+
         for (int i = 0; i < 200; i++) {
             if (i == 100) {
-                executor.execute(() -> executePostRequest(FAVORITE_EMPLOYER_BASE_URL + "/" + 1 + "/refresh"));
+                executor.execute(() -> executePostRequest(FAVORITE_VACANCY_BASE_URL + "/" + vacancyId + "/refresh"));
             }
-            executor.execute(() -> executeGet(FAVORITE_EMPLOYER_BASE_URL));
+            executor.execute(() -> executeGet(FAVORITE_VACANCY_BASE_URL));
         }
         awaitExecutorTermination(executor);
-        Employer employerEntity = employerDao.getEager(1);
-        assertDtoFromJsonAndEntityAreSame(jsonEmployer, employerEntity);
-        assertEquals(200, (int) employerEntity.getViewsCount().getCounter());
+
+        Vacancy vacancyEntity = vacancyDao.getEager(vacancyId);
+        assertVacancyDtoFromJsonAndEntityAreSame(jsonVacancy, vacancyEntity);
+        assertEquals(200, (int) vacancyEntity.getViewsCount().getCounter());
+
         IntStream.range(1, 11)
-                .mapToObj(i -> employerDao.getEager(i))
-                .peek(employer -> logger.info(employer.getId() + " - " + employer.getName()))
-                .map(employer -> employer.getViewsCount().getCounter())
+                .mapToObj(i -> vacancyDao.getEager(i))
+                .peek(vacancy -> logger.info(vacancy.getId() + " - " + vacancy.getName()))
+                .map(vacancy -> vacancy.getViewsCount().getCounter())
                 .peek(counter -> logger.info("Views count: " + counter))
                 .forEach(counter -> assertEquals(200, (int) counter));
-    }*/
+    }
 
     private HttpResponse saveSingleVacancyToDatabase(String pathToVacancyJson) throws IOException {
         String employerJsonString = Files.readString(Path.of(JSON_BASE_PATH + "/employer.json"));
         String vacancyJsonString = Files.readString(Path.of(JSON_BASE_PATH + pathToVacancyJson));
-        when(apiService.fetchEmployersFromApiById(employerId)).thenReturn(employerJsonString);
-        when(apiService.fetchVacanciesFromApiById(vacancyId)).thenReturn(vacancyJsonString);
-        parametersMap.put("vacancy_id", String.valueOf(employerId));
+        doReturn(vacancyJsonString).when(apiService).fetchVacanciesFromApiById(vacancyId);
+        doReturn(employerJsonString).when(apiService).fetchEmployersFromApiById(employerId);
+        parametersMap.put("vacancy_id", String.valueOf(vacancyId));
         parametersMap.put("comment", DEFAULT_COMMENT);
         HttpResponse response = executePostRequestWithParams(FAVORITE_VACANCY_BASE_URL, parametersMap);
         parametersMap.clear();
@@ -355,7 +384,8 @@ public class VacancyResourceTest extends AppBaseTest {
         area.setName("Area name 2");
         for (int i = 1; i <= numOfVacancies; i++) {
             Vacancy vacancy = new Vacancy();
-            Employer employer = createAndSaveEmployerWithId(i);
+            Employer employer = createEmployerWithId(i);
+            vacancyDao.save(employer);
             VacancyComment comment = new VacancyComment(DEFAULT_COMMENT);
             VacancyCounter counter = new VacancyCounter();
             comment.setVacancy(vacancy);
@@ -366,23 +396,49 @@ public class VacancyResourceTest extends AppBaseTest {
             vacancy.setArea(area);
             vacancy.setComment(comment);
             vacancy.setViewsCount(counter);
+            vacancy.setEmployer(employer);
             vacancyDao.save(vacancy);
         }
     }
 
 
-    private void assertDtoFromJsonAndEntityAreSame(EmployerDtoById jsonDto, Employer entity) {
+    private void assertVacancyDtoFromJsonAndEntityAreSame(VacancyDto jsonDto, Vacancy entity) {
+        Employer employer = entity.getEmployer();
+        EmployerDto employerDto = jsonDto.getEmployer();
+        assertEquals(employerDto.getId(), employer.getId());
+        assertEquals(employerDto.getName(), employer.getName());
+
+        Salary salary = entity.getSalary();
+        SalaryDto salaryDto = jsonDto.getSalary();
+
+        assertEquals(salaryDto.getTo(), salary.getTo());
+        assertEquals(salaryDto.getFrom(), salary.getFrom());
+        assertEquals(salaryDto.getCurrency(), salary.getCurrency());
+        assertEquals(salaryDto.getGross(), salary.isGross());
+
         assertEquals(jsonDto.getId(), entity.getId());
         assertEquals(jsonDto.getName(), entity.getName());
-        assertEquals(jsonDto.getDescription(), entity.getDescription());
+        assertEquals(jsonDto.getCreatedAt(), entity.getCreatedAt());
         assertEquals(jsonDto.getArea().getId(), entity.getArea().getId());
         assertEquals(jsonDto.getArea().getName(), entity.getArea().getName());
     }
 
-    private void assertDtoFromJsonAndDtoFromResponseAreSame(EmployerDtoById jsonDto, FavoriteEmployerDto responseDto) {
+    private void assertVacancyDtoFromJsonAndDtoFromResponseAreSame(VacancyDto jsonDto, FavoriteVacancyDto responseDto) {
         assertEquals(jsonDto.getId(), responseDto.getId());
         assertEquals(jsonDto.getName(), responseDto.getName());
-        assertEquals(jsonDto.getDescription(), responseDto.getDescription());
+        assertEquals(jsonDto.getCreatedAt(), responseDto.getCreatedAt());
+
+        SalaryDto responseSalary = responseDto.getSalary();
+        SalaryDto jsonSalary = jsonDto.getSalary();
+
+        assertEquals(jsonSalary.getTo(), responseSalary.getTo());
+        assertEquals(jsonSalary.getFrom(), responseSalary.getFrom());
+        assertEquals(jsonSalary.getCurrency(), responseSalary.getCurrency());
+        assertEquals(jsonSalary.getGross(), responseSalary.getGross());
+
+        assertEquals(jsonDto.getEmployer().getId(), responseDto.getEmployer().getId());
+        assertEquals(jsonDto.getEmployer().getName(), responseDto.getEmployer().getName());
+
         assertEquals(jsonDto.getArea().getId(), responseDto.getArea().getId());
         assertEquals(jsonDto.getArea().getName(), responseDto.getArea().getName());
     }
